# arm7tdmi_mem_fns

./: Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: cross_test.yml  gh_pages.yml
arm7tdmi_aeabi/: all.html  index.html  sidebar-items.js
arm7tdmi_aeabi/fn_declarations/: fn.aeabi_idiv.html  fn.aeabi_idivmod.html  fn.aeabi_memclr.html  fn.aeabi_memclr4.html  fn.aeabi_memclr8.html  fn.aeabi_memcpy.html  fn.aeabi_memcpy4.html  fn.aeabi_memcpy8.html  fn.aeabi_memmove.html  fn.aeabi_memmove4.html  fn.aeabi_memmove8.html  fn.aeabi_memset.html  fn.aeabi_memset4.html  fn.aeabi_memset8.html  fn.aeabi_uidiv.html  fn.aeabi_uidivmod.html  fn.aeabi_uread4.html  index.html  (+8 more)
arm7tdmi_mem_fns/: all.html  fn.copy_u16_forward.html  fn.copy_u16_overlapping.html  fn.copy_u16_reverse.html  fn.copy_u32_forward.html  fn.copy_u32_overlapping.html  fn.copy_u32_reverse.html  fn.copy_u8_forward.html  fn.copy_u8_overlapping.html  fn.copy_u8_reverse.html  fn.z__aeabi_memcpy.html  fn.z__aeabi_memcpy4.html  fn.z__aeabi_memcpy8.html  fn.z__aeabi_memcpy_sram.html  fn.z__aeabi_memcpy_vram.html  fn.z__aeabi_memmove.html  fn.z__aeabi_memmove4.html  fn.z__aeabi_memmove8.html  fn.zmemcpy.html  fn.zmemmove.html  index.html  sidebar-items.js
src/: a32_assembly.s  assembly_a32.s  copy_u16.rs  copy_u16.s  copy_u32.rs  copy_u32.s  copy_u8.rs  copy_u8.s  fn_declarations.rs  lib.rs  mem_cpy_move.rs  mem_cpy_move.s  mem_set_clr.s  memory.s  the_code.s  unaligned.s
tests/: all_tests.rs  assembly_code_tests.rs  test_mem_cpy_move.rs  test_mem_set_clr.rs
(+26 files in other folders)
