[package]
name = "arm7tdmi_mem_fns"
version = "0.1.0"
edition = "2021"
keywords = ["arm7tdmi", "armv4t", "thumbv4t"]
categories = ["embedded", "no-std"]
publish = false

# main license is CCO, the other two are provided for comaptibility with other Rust code.
license = "CCO OR Apache-2.0 OR MIT"

[dependencies]
